[gd_scene load_steps=11 format=3 uid="uid://ca7ihkmiwn56o"]

[ext_resource type="Script" uid="uid://cuej66nfopqbn" path="res://Scripts/Vistas/grupos.gd" id="1_jk43g"]
[ext_resource type="PackedScene" uid="uid://d2lg7n0j8phb3" path="res://Scenes/Componentes/header.tscn" id="1_onmrn"]
[ext_resource type="PackedScene" uid="uid://cyx2rvgubown8" path="res://Scenes/Componentes/lateral_menu.tscn" id="2_sg8rq"]
[ext_resource type="PackedScene" uid="uid://clcmkgjftrhqq" path="res://Scenes/Componentes/panel.tscn" id="3_m2ajn"]
[ext_resource type="Texture2D" uid="uid://cxpf06getr8e8" path="res://Sprites/Referencias/wireframe_desktop.png" id="3_sg8rq"]
[ext_resource type="Theme" uid="uid://ys5m5jo3mjhs" path="res://Sprites/Estilos/theme.tres" id="4_jk43g"]
[ext_resource type="Theme" uid="uid://byuw71bepva6s" path="res://Sprites/Estilos/theme_ext.tres" id="5_vlbqu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwinh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m107w"]
bg_color = Color(0.658824, 0.72549, 0.768627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktkqc"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.713726, 0.819608, 0.760784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Grupos" type="Panel" groups=["vistas"]]
offset_right = 1142.0
offset_bottom = 602.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kwinh")
script = ExtResource("1_jk43g")
metadata/_edit_lock_ = true

[node name="Header" parent="." instance=ExtResource("1_onmrn")]
layout_mode = 0

[node name="LateralMenu" parent="." instance=ExtResource("2_sg8rq")]
layout_mode = 0
offset_top = 75.0
offset_bottom = 602.0

[node name="PanelFiltros" parent="." instance=ExtResource("3_m2ajn")]
layout_mode = 0
offset_left = 196.0
offset_top = 90.0
offset_right = 1125.0
offset_bottom = 165.0

[node name="LinNombre" type="LineEdit" parent="PanelFiltros"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 210.0
offset_bottom = 60.0
theme = ExtResource("4_jk43g")
placeholder_text = "Grupo"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="OptConUsuario" type="OptionButton" parent="PanelFiltros"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 360.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_vlbqu")
alignment = 1
text_overrun_behavior = 3
selected = 0
item_count = 3
popup/item_0/text = "N/A"
popup/item_0/id = 0
popup/item_1/text = "Con Usuario"
popup/item_1/id = 1
popup/item_2/text = "Sin Usuario"
popup/item_2/id = 2
metadata/_edit_lock_ = true

[node name="OptConZona" type="OptionButton" parent="PanelFiltros"]
layout_mode = 0
offset_left = 374.0
offset_top = 16.0
offset_right = 511.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_vlbqu")
alignment = 1
text_overrun_behavior = 3
selected = 0
item_count = 3
popup/item_0/text = "N/A"
popup/item_0/id = 0
popup/item_1/text = "Con Zona"
popup/item_1/id = 1
popup/item_2/text = "Sin Zona"
popup/item_2/id = 2
metadata/_edit_lock_ = true

[node name="OptConSalon" type="OptionButton" parent="PanelFiltros"]
layout_mode = 0
offset_left = 525.0
offset_top = 16.0
offset_right = 661.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_vlbqu")
alignment = 1
text_overrun_behavior = 3
selected = 0
item_count = 3
popup/item_0/text = "N/A"
popup/item_0/id = 0
popup/item_1/text = "Con Ambiente"
popup/item_1/id = 1
popup/item_2/text = "Sin Ambiente"
popup/item_2/id = 2
metadata/_edit_lock_ = true

[node name="BtnBuscar" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 675.0
offset_top = 14.0
offset_right = 780.0
offset_bottom = 59.0
focus_mode = 0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_m107w")
text = "Buscar"
metadata/_edit_lock_ = true

[node name="BtnNuevo" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 810.0
offset_top = 15.0
offset_right = 915.0
offset_bottom = 60.0
focus_mode = 0
theme = ExtResource("4_jk43g")
text = "Nuevo"
metadata/_edit_lock_ = true

[node name="LinZonas" type="LineEdit" parent="PanelFiltros"]
layout_mode = 0
offset_left = 679.0
offset_top = 95.0
offset_right = 812.0
offset_bottom = 139.0
theme = ExtResource("4_jk43g")
placeholder_text = "Zona"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="BtnRebuscar" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 823.0
offset_top = 94.0
offset_right = 928.0
offset_bottom = 139.0
focus_mode = 0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_m107w")
text = "Buscar"
metadata/_edit_lock_ = true

[node name="PanelTabla" parent="." instance=ExtResource("3_m2ajn")]
layout_mode = 0
offset_left = 194.0
offset_top = 179.0
offset_right = 862.0
offset_bottom = 588.0

[node name="Titulos" type="HBoxContainer" parent="PanelTabla"]
layout_mode = 2
offset_left = 6.0
offset_top = 7.0
offset_right = 661.0
offset_bottom = 40.0
alignment = 1
metadata/_edit_lock_ = true

[node name="TxtId" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtGrupo" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Grupo"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtUsuarios" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Usuarios"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtZonas" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Zonas"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtSalones" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Ambientes"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtOk" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Ok"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Tabla" type="ScrollContainer" parent="PanelTabla"]
layout_mode = 0
offset_left = 7.0
offset_top = 43.0
offset_right = 659.0
offset_bottom = 401.0
metadata/_edit_lock_ = true

[node name="Registros" type="VBoxContainer" parent="PanelTabla/Tabla"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="PanelPermisos" parent="." instance=ExtResource("3_m2ajn")]
layout_mode = 0
offset_left = 871.0
offset_top = 244.0
offset_right = 1126.0
offset_bottom = 590.0

[node name="Titulos" type="HBoxContainer" parent="PanelPermisos"]
layout_mode = 2
offset_left = 6.0
offset_top = 7.0
offset_right = 247.0
offset_bottom = 40.0
alignment = 1
metadata/_edit_lock_ = true

[node name="TxtId" type="Label" parent="PanelPermisos/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtZona" type="Label" parent="PanelPermisos/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Zona"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtOk" type="Label" parent="PanelPermisos/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_jk43g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ktkqc")
text = "Ok"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Tabla" type="ScrollContainer" parent="PanelPermisos"]
layout_mode = 0
offset_left = 7.0
offset_top = 43.0
offset_right = 246.0
offset_bottom = 336.0
metadata/_edit_lock_ = true

[node name="Registros" type="VBoxContainer" parent="PanelPermisos/Tabla"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="SprMockups" type="Sprite2D" parent="." groups=["ocultable"]]
visible = false
self_modulate = Color(1, 1, 1, 0.486275)
position = Vector2(0, -2520)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_sg8rq")
centered = false
metadata/_edit_lock_ = true

[connection signal="pressed" from="PanelFiltros/BtnBuscar" to="." method="_on_btn_buscar_pressed"]
[connection signal="pressed" from="PanelFiltros/BtnNuevo" to="." method="_on_btn_nuevo_pressed"]
